packages/rescript-path-rebuild/tests/Main.test.res.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse errors {-2}.js% 1`] = `
"Unexpected end of string. Expected a character after the escape symbol %
{-2}.js%
        ^"
`;

exports[`Parse errors {a} 1`] = `
"Bad range limit: a
{a}
  ^"
`;

exports[`Parse errors foo/{-2.. 1`] = `
"Unexpected end of string. Did you forget to close a range?
foo/{-2..
         ^"
`;

exports[`Parse errors test/{-1..-2}/{-2}.js 1`] = `
"Bad range limits: -1..-2
test/{-1..-2}/{-2}.js
            ^"
`;

exports[`Parse errors test/{-1..1}/{-2}.js 1`] = `
"Bad range limits: -1..1
test/{-1..1}/{-2}.js
           ^"
`;

exports[`Parse errors test/{0a}/{-2}.js 1`] = `
"Bad range limit: 0a
test/{0a}/{-2}.js
        ^"
`;

exports[`Parse errors test/{1%..2}/{-2}.js 1`] = `
"Unexpected escape symbol % inside a range
test/{1%..2}/{-2}.js
       ^"
`;

exports[`Parse errors test/{1...2}/{-2}.js 1`] = `
"Unexpected . symbol
test/{1...2}/{-2}.js
         ^"
`;

exports[`Parse errors test/{1..0}/{-2}.js 1`] = `
"Bad range limits: 1..0
test/{1..0}/{-2}.js
          ^"
`;

exports[`Parse errors test/{1..0a}/{-2}.js 1`] = `
"Bad range limit: 0a
test/{1..0a}/{-2}.js
           ^"
`;

exports[`Parse errors test/{1..2.1}/{-2}.js 1`] = `
"Unexpected . symbol
test/{1..2.1}/{-2}.js
          ^"
`;

exports[`Parse errors test/{1.2}/{-2}.js 1`] = `
"Unexpected character: 2. Was expecting a . symbol
test/{1.2}/{-2}.js
        ^"
`;

exports[`Parse errors test/{1/..2}/{-2}.js 1`] = `
"Unexpected / symbol inside a range
test/{1/..2}/{-2}.js
       ^"
`;

exports[`Parse errors test/{1{..2}/{-2}.js 1`] = `
"Unexpected { symbol inside a range
test/{1{..2}/{-2}.js
       ^"
`;

exports[`Parse errors test/{2..1}/{-2}.js 1`] = `
"Bad range limits: 2..1
test/{2..1}/{-2}.js
          ^"
`;

exports[`Parse errors test}/{1..2}/{-2}.js 1`] = `
"Unexpected } symbol
test}/{1..2}/{-2}.js
    ^"
`;
